LPA-1872 Overlapping text fixed

--- a/service-front/public/assets/v2/css/application.css
+++ b/service-front/public/assets/v2/css/application.css
@@ -3604,6 +3604,9 @@ input[type=number] {
         top: 14px;
         right: 14px;
         margin: 0; } }
+  @media (max-width: 750px) {
+    .accordion-summary.wide-label .label {
+      width: 103px; } }
   .accordion-summary .link {
     display: inline-block;
     float: right; }
@@ -3622,6 +3625,9 @@ input[type=number] {
     margin-right: 92px;
     padding-right: 130px;
     border-right: 6px solid #fff; }
+  @media (min-width: 750px) {
+    .accordion-summary.wide-label .title-box {
+      padding-right: 215px; } }
   .accordion-summary .label-and-edit-box {
     position: absolute;
     top: 0;
